--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^2.1.7",
     "gatsby-transformer-sharp": "^2.2.5",
     "i18next": "17.0.13",
+    "i18next-browser-languagedetector": "^4.0.0",
     "motion-ui": "1.2.3",
     "node-sass": "4.12.0",
     "prism-react-renderer": "0.1.7",
