--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v1
 
+      - name: Install Linux packages required by Cypress
+        run: |
+          apt-get update
+          apt-get install -y xvfb libgtk-3-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+
       - name: Install JS dependencies
         run: yarn install
 
