--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-remark-images": "^3.1.28",
     "gatsby-source-filesystem": "^2.1.7",
     "gatsby-transformer-sharp": "^2.2.5",
     "i18next": "^17.0.13",
