--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "yarn clean && gatsby build",
     "clean": "gatsby clean",
-    "start:dev": "yarn clean &&  gatsby develop",
-    "start:prod": "gatsby build && gatsby serve --port 9009",
+    "start:dev": "yarn clean && gatsby develop",
+    "start:prod": "yarn build && gatsby serve --port 9009",
     "cy:open": "cypress open",
     "cy:run": "CYPRESS_BASE_URL=http://localhost:9009 cypress run",
     "test": "jest --config='./jest/config.js'",
