--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "foundation-sites": "^6.5.3",
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.7",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-mdx": "^1.0.40",
     "gatsby-plugin-offline": "^2.2.4",
