--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.6",
     "@mdx-js/mdx": "^1.1.4",
     "@mdx-js/react": "^1.1.4",
+    "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "formik": "^1.5.8",
     "foundation-sites": "^6.5.3",
@@ -49,6 +50,7 @@
     "react-i18next": "^10.12.2",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.0.0",
     "webpack": "^4.0.0",
     "what-input": "^5.2.6",
     "yup": "^0.27.0"
@@ -60,6 +62,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-plugin-prismjs": "^1.1.1",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-gatsby": "^0.2.13",
     "cypress": "^3.4.1",
     "eslint": "^6.5.1",
@@ -67,6 +70,7 @@
     "eslint-plugin-flowtype": "2.x",
     "eslint-plugin-react-hooks": "^2.0.1",
     "gatsby-plugin-sentry": "^1.0.1",
+    "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "^3.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
