--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.12.2",
     "react-slick": "^0.25.2",
+    "react-use": "^13.22.4",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.0.0",
     "webpack": "^4.0.0",
     "what-input": "^5.2.6",
     "yup": "^0.27.0"
