--- a/package.json
+++ b/package.json
@@ -66,11 +66,16 @@
     "babel-preset-gatsby": "^0.2.13",
     "cypress": "^3.4.1",
     "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-cypress": "^2.6.1",
-    "eslint-plugin-flowtype": "2.x",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "gatsby-plugin-sentry": "^1.0.1",
-    "gatsby-plugin-styled-components": "^3.1.18",
     "husky": "^3.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
@@ -80,7 +85,6 @@
     "prop-types": "^15.7.2",
     "react-test-renderer": "^16.9.0",
     "rimraf": "^3.0.1",
-    "standardx": "^3.0.1",
     "start-server-and-test": "^1.10.0",
     "typescript": "^3.6.3"
   },
@@ -95,32 +99,9 @@
       "git add"
     ],
     "**/*.{js,jsx}": [
-      "standardx --fix",
+      "eslint --fix",
       "git add"
     ]
-  },
-  "standardx": {
-    "parser": "babel-eslint",
-    "plugins": [
-      "react-hooks",
-      "cypress"
-    ],
-    "globals": [
-      "describe",
-      "it",
-      "expect",
-      "cy",
-      "jest"
-    ]
-  },
-  "eslintConfig": {
-    "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
-      "cypress/no-assigning-return-values": "error",
-      "cypress/no-unnecessary-waiting": "error",
-      "cypress/assertion-before-screenshot": "warn"
-    }
   },
   "keywords": [
     "gatsby",
