--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.*
+!.env.example
 
 # gatsby files
 .cache/
@@ -71,6 +72,3 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
-
-# IDE
-.idea
