--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run tests
         run: |
-          yarn test &&
+          yarn test:unit-testing &&
           yarn test:e2e:ci
