--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start:prod": "yarn build && gatsby serve --port 9009",
     "cy:open": "cypress open",
     "cy:run": "cross-env CYPRESS_BASE_URL=http://localhost:9009 cypress run",
-    "test": "jest --config='./jest/config.js'",
+    "test:unit-testing": "jest --config='./jest/config.js'",
     "test:e2e": "start-server-and-test start:dev http://localhost:8000 cy:open",
-    "test:e2e:ci": "start-server-and-test start:prod http://localhost:9009 cy:run"
+    "test:e2e:ci": "start-server-and-test start:prod http://localhost:9009 cy:run",
+    "test:all:ci": "yarn test:unit-testing && yarn test:e2e:ci"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
