--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -5,6 +5,6 @@ options:
 
 syncs:
   website-sync:
-    sync_strategy: "native_osx"
+    sync_strategy: "unison"
     src: "."
     sync_excludes: ['.cache', 'public', '.idea', 'node_modules' ]
