--- a/deploy/manifests/production/production-1/website/deployment-patch.yaml
+++ b/deploy/manifests/production/production-1/website/deployment-patch.yaml
@@ -18,3 +18,8 @@ spec:
             limits:
               cpu: 200m
               memory: 200Mi
+          env:
+            - name: SENTRY_DSN
+              value: https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+            - name: RECAPTCHA_SITE_KEY
+              value: 6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
