--- a/docker-compose.mac.yml
+++ b/docker-compose.mac.yml
@@ -7,6 +7,10 @@ services:
       dockerfile: docker_dev/Dockerfile.mac
     image: hubrise/website-dev
     container_name: website_dev
+    environment:
+      - NODE_ENV=local
+      - SENTRY_DSN=https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+      - RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
     volumes:
       - website-sync:/var/www/website
     ports:
@@ -18,6 +22,10 @@ services:
       dockerfile: docker_dev/Dockerfile.mac
     image: hubrise/website-dev
     container_name: website_test
+    environment:
+      - NODE_ENV=local
+      - SENTRY_DSN=https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+      - RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
     volumes:
       - website-sync:/var/www/website
     command: /usr/local/bin/yarn test:all:ci
