--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       dockerfile: docker_dev/Dockerfile
     image: hubrise/website-dev
     container_name: website_dev
+    environment:
+      - NODE_ENV=local
+      - SENTRY_DSN=https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+      - RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
     volumes:
       - .:/var/www/website
     ports:
@@ -18,6 +22,10 @@ services:
       dockerfile: docker_dev/Dockerfile
     image: hubrise/website-dev
     container_name: website_test
+    environment:
+      - NODE_ENV=local
+      - SENTRY_DSN=https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+      - RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
     volumes:
       - .:/var/www/website
     command: /usr/local/bin/yarn test:all:ci
@@ -28,5 +36,9 @@ services:
       dockerfile: Dockerfile
     image: hubrise/website
     container_name: website_prod
+    environment:
+      - NODE_ENV=production
+      - SENTRY_DSN=https://96b4d1defd7648308c6e30f8a3470cfd@sentry.io/1776244
+      - RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
     ports:
       - "8001:80"
