--- a/package.json
+++ b/package.json
@@ -15,90 +15,87 @@
     "test:all": "yarn test && yarn cypress:run"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@sentry/react": "^7.0.0",
     "formik": "^2.2.8",
-    "gatsby": "^4.0.0",
+    "gatsby": "^5.11.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-client-side-redirect": "^1.1.0",
-    "gatsby-plugin-google-analytics": "^4.0.0",
-    "gatsby-plugin-google-gtag": "^4.12.1",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-mdx": "^2.6.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "i18next": "^20.3.1",
+    "gatsby-plugin-google-analytics": "^5.11.0",
+    "gatsby-plugin-google-gtag": "^5.11.0",
+    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-mdx": "^5.11.0",
+    "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-styled-components": "^6.11.0",
+    "gatsby-remark-copy-linked-files": "^6.11.0",
+    "gatsby-remark-images": "^7.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
+    "i18next": "^23.0.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "node-sass": "^8.0.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.23.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-i18next": "^11.10.0",
+    "react-i18next": "^13.0.0",
     "react-slick": "^0.28.1",
     "react-use": "^17.2.4",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1",
-    "remark-preset-lint-recommended": "^5.0.0",
+    "remark": "^14.0.0",
+    "remark-html": "^15.0.0",
+    "remark-preset-lint-recommended": "^6.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
-    "webpack": "^5.38.1",
+    "webpack": "^5.87.0",
     "what-input": "^5.2.10",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.22.0",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
+    "@testing-library/react": "^14.0.0",
     "@types/i18next-browser-languagedetector": "^3.0.0",
     "@types/js-yaml": "^4.0.1",
     "@types/node": "^18.16.0",
-    "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6",
-    "@types/styled-components": "^5.1.14",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/styled-components": "^5.1.26",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.2",
-    "babel-plugin-prismjs": "^2.0.1",
-    "babel-plugin-styled-components": "^1.13.2",
-    "babel-preset-gatsby": "^1.6.0",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-prismjs": "^2.1.0",
+    "babel-plugin-styled-components": "^2.1.3",
+    "babel-preset-gatsby": "^3.11.0",
     "cross-env": "^7.0.3",
     "cypress": "^12.0.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gatsby-plugin-sentry": "^1.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.5.0",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.3.0",
-    "react-test-renderer": "^17.0.2",
-    "start-server-and-test": "^1.12.3",
+    "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0",
+    "start-server-and-test": "^2.0.0",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "keywords": [
-    "gatsby",
     "hubrise"
   ],
-  "license": "MIT",
+  "license": "UNLICENSED",
   "repository": {
     "type": "git",
     "url": "git@github.com:HubRise/website.git"
