--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-transformer-sharp": "^5.11.0",
     "i18next": "^23.0.0",
     "i18next-browser-languagedetector": "^6.1.1",
+    "mdast-util-to-string": "^2",
     "node-sass": "^8.0.0",
     "prism-react-renderer": "^1.2.1",
     "prismjs": "^1.23.0",
@@ -49,6 +50,7 @@
     "remark-preset-lint-recommended": "^6.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
+    "unist-util-visit": "^2",
     "webpack": "^5.87.0",
     "what-input": "^5.2.10",
     "yup": "^0.32.9"
