Separate linter rules for TS and MD files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "yarn clean && yarn gatsby build",
     "clean": "yarn gatsby clean",
-    "eslint": "eslint --fix src --ext .ts,tsx",
+    "eslint": "eslint src content --fix --ext ts,tsx,md,mdx",
     "gatsby": "node ./node_modules/.bin/gatsby",
     "start:dev": "yarn gatsby develop",
     "start:prod": "yarn gatsby serve --port 9009",
@@ -46,6 +46,7 @@
     "react-slick": "^0.28.1",
     "react-use": "^17.2.4",
     "remark": "^14.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-html": "^15.0.0",
     "remark-preset-lint-recommended": "^6.1.0",
     "slick-carousel": "^1.8.1",
@@ -61,6 +62,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/i18next-browser-languagedetector": "^3.0.0",
     "@types/js-yaml": "^4.0.1",
+    "@types/mdx": "^2.0.5",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -79,6 +81,7 @@
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
