--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
+      - name: Setup Node.js and package cache
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.16.0
+          cache: 'yarn'
+
       - name: Install JS dependencies
         run: yarn install
 
