--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -11,7 +11,7 @@ jobs:
       # Default is 4_000 ms.
       # Some tests take >= 1 minute on CI, while they take a few seconds locally. Need to investigate.
       CYPRESS_DEFAULT_COMMAND_TIMEOUT: 120000
-      DEBUG: cypress:server:util:process_profiler,cypress:network:agent,cypress:server:request,cypress:server:response
+      DEBUG: cypress:server:util:process_profiler,cypress:network:agent,cypress:server:request,cypress:server:response,cypress:net-stubbing*
 
     # To upgrade to the latest version, see https://hub.docker.com/r/cypress/browsers/tags
     container: cypress/browsers:node-18.16.1-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
