--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,7 +14,9 @@ jobs:
       DEBUG: cypress:server:util:process_profiler,cypress:network:agent
 
     # To upgrade to the latest version, see https://hub.docker.com/r/cypress/browsers/tags
-    container: cypress/browsers:node-18.16.1-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
+    container:
+      image: cypress/browsers:node-18.16.1-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
+      options: --shm-size=2g
 
     steps:
       - name: Clone repository
@@ -24,7 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.16.0
-          cache: 'yarn'
+          cache: "yarn"
 
       - name: Install JS dependencies
         run: yarn install
