--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "cypress:open": "start-server-and-test dev http://localhost:3000 'cypress open'",
-    "cypress:run": "start-server-and-test start http://localhost:3000 'cypress run --browser chrome'",
+    "cypress:run": "start-server-and-test start http://localhost:3000 'cypress run --browser electron'",
     "dev": "concurrently \"node src/content-hot-reload.js --watch\" \"next dev\"",
     "build": "next build",
     "eslint": "next lint --fix",
