--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,6 +13,8 @@ jobs:
       # See issue: "Cypress hangs during execution of test suite" https://github.com/cypress-io/cypress/issues/6695
       CYPRESS_DEFAULT_COMMAND_TIMEOUT: 120000
       DEBUG: cypress:server:util:process_profiler,cypress:network:agent
+      SENTRY_DSN: https://96b4d1defd7648308c6e30f8a3470cfd@o310444.ingest.sentry.io/1776244
+      NEXT_PUBLIC_SENTRY_DSN: https://96b4d1defd7648308c6e30f8a3470cfd@o310444.ingest.sentry.io/1776244
 
     # To upgrade to the latest version, see https://hub.docker.com/r/cypress/browsers/tags
     container: cypress/browsers:node-18.16.1-chrome-114.0.5735.133-1-ff-114.0.2-edge-114.0.1823.51-1
