--- a/content/en/apps.yaml
+++ b/content/en/apps.yaml
@@ -13,6 +13,7 @@ content:
   all_apps: All Apps
   categories:
     - title: Point of Sales
+      slug: point-of-sales
       has_suggest_app: true
       apps:
         - website: https://3s-pos.com
@@ -195,6 +196,7 @@ content:
           description: Zelty is a complete suite of solutions designed for multi-site. Zelty is suitable for any type of restaurant from fast food to traditional catering.
           additional_info:
     - title: Food Ordering Platforms
+      slug: food-ordering-platforms
       apps:
         - website: https://delicity.com
           documentation: /apps/delicity
@@ -288,6 +290,7 @@ content:
           title: Uber Eats
           description: Uber Eats is an online food ordering and delivery platform for local restaurants. Customers can order food online or via a mobile app. Available in 45 markets and 6,000 cities.
     - title: Online Ordering
+      slug: online-ordering
       apps:
         - website: https://www.app4.co.uk/
           documentation: /apps/app4
@@ -417,6 +420,7 @@ content:
           description: Zuplyit by AirTouchMedia is a white label online ordering solution for the food industry, combined with a Delivery Management Solution, as well as a suite of customer loyalty and promotion tools.
           additional_info:
     - title: Delivery Management
+      slug: delivery-management
       apps:
         - website: http://www.captain.ai
           documentation: /apps/captain
@@ -459,6 +463,7 @@ content:
           description: Stuart offers businesses of all sizes, all sectors, on demand fast delivery services with a customised way of transporting goods.
           additional_info:
     - title: Loyalty and Marketing
+      slug: loyalty-and-marketing
       apps:
         - website: https://www.como.com
           documentation: /apps/como
@@ -497,6 +502,7 @@ content:
           title: UPXP
           description: UPXP is the first cryptocurrency dedicated to restaurateurs. UPXP rewards customers with cryptocurrency they can use in other businesses. Engage clients and avoid paying commissions to banks and third-parties.
     - title: Operations and Inventory
+      slug: operations-and-inventory
       apps:
         - website: https://get.apicbase.com
           documentation: /apps/apicbase
@@ -544,6 +550,7 @@ content:
           title: SOMM'IT
           description: SOMM'IT helps you manage your wine list. Sync your inventory with your EPOS to keep your wine list up to date. SOMM'IT includes a large wine library, and a dematerialised procurement system.
     - title: Other Apps
+      slug: other-apps
       apps:
         - website:
           documentation: /apps/catalog-manager
