--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.4.3",
     "next": "13.4.12",
     "next-mdx-remote": "^4.4.1",
+    "node-mocks-http": "^1.13.0",
     "nodemailer": "^6.9.7",
     "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.26.0",
