--- a/content/en/apps.yaml
+++ b/content/en/apps.yaml
@@ -33,6 +33,12 @@ content:
           title: Carré POS
           description: Carré POS is a Point of Sales designed for fast ordering. It adapts to all types of businesses, including restaurants, bakeries, local stores, boutiques, hairdressers, and florists.
           additional_info:
+        - website: https://www.clyosystems.com
+          documentation: /apps/clyo
+          logo: clyo.png
+          title: Clyo Systems
+          description: Clyo Systems offers an all-in-one EPOS solution for restaurants including inventory, loyalty, Kitchen Display System, time-tracking, and online ordering. It's a modular EPOS to which you can include customisable add-ons.
+          additional_info: Integration in progress.
         - website: https://www.epostechnologies.co.uk/
           documentation: /apps/epos-technologies
           logo: epostechnologies.png
