--- a/.env.development
+++ b/.env.development
@@ -11,8 +11,11 @@ NEXT_PUBLIC_SENTRY_DSN=$SENTRY_DSN
 # Interactive mode (hot reloading)
 NEXT_PUBLIC_INTERACTIVE_DEV_MODE=true
 
-# Google Recaptcha
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
+# SendGrid
+SENDGRID_USERNAME=sendgrid-usernameX
+SENDGRID_PASSWORD=sendgrid-passwordX
+CONTACT_EMAIL=contact@test.com
 
-# The URL to sent contact messages to
-NEXT_PUBLIC_CONTACT_MESSAGE_URL=http://localhost:4003/api/contact_message
+# Google Recaptcha
+RECAPTCHA_SECRET_KEY=recaptcha-secret-keyX
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=next-public-recaptcha-site-keyX
