--- a/.env.production
+++ b/.env.production
@@ -5,14 +5,17 @@ NODE_ENV=production
 WAIT_ON_TIMEOUT=
 
 # Sentry
-# SENTRY_DSN=               - defined in the cluster
-# NEXT_PUBLIC_SENTRY_DSN=   - defined in the cluster
+# SENTRY_DSN=                      - defined in the cluster
+# NEXT_PUBLIC_SENTRY_DSN=          - defined in the cluster
 
 # Interactive mode (hot reloading)
 NEXT_PUBLIC_INTERACTIVE_DEV_MODE=
 
-# Google Recaptcha
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LfjbNYUAAAAAPx_tCv_YyhueK2JIjf58b2HGU8d
+# SendGrid
+# SENDGRID_USERNAME=               - defined in the cluster
+# SENDGRID_PASSWORD=               - defined in the cluster
+# CONTACT_EMAIL=                   - defined in the cluster
 
-# The URL to sent contact messages to
-NEXT_PUBLIC_CONTACT_MESSAGE_URL=https://manager.hubrise.com/api/contact_message
+# Google Recaptcha
+# RECAPTCHA_SECRET_KEY=            - defined in the cluster
+# NEXT_PUBLIC_RECAPTCHA_SITE_KEY=  - defined in the cluster
