ENV vars defined in a cluster's secret

--- a/deploy/manifests/bases/website/deployment.yaml
+++ b/deploy/manifests/bases/website/deployment.yaml
@@ -26,6 +26,10 @@ spec:
         - name: website
           image: hubrise/website
 
+          envFrom:
+            - configMapRef:
+                name: website-env
+
           readinessProbe:
             httpGet:
               path: /api/live
