--- a/deploy/manifests/bases/website/deployment.yaml
+++ b/deploy/manifests/bases/website/deployment.yaml
@@ -27,7 +27,7 @@ spec:
           image: hubrise/website
 
           envFrom:
-            - configMapRef:
+            - secretRef:
                 name: website-env
 
           readinessProbe:
