--- a/.env.development
+++ b/.env.development
@@ -12,10 +12,10 @@ NEXT_PUBLIC_SENTRY_DSN=$SENTRY_DSN
 NEXT_PUBLIC_INTERACTIVE_DEV_MODE=true
 
 # SendGrid
-SENDGRID_USERNAME=sendgrid-usernameX
-SENDGRID_PASSWORD=sendgrid-passwordX
-CONTACT_EMAIL=contact@test.com
+SENDGRID_USERNAME=
+SENDGRID_PASSWORD=
+CONTACT_EMAIL=
 
 # Google Recaptcha
-RECAPTCHA_SECRET_KEY=recaptcha-secret-keyX
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=next-public-recaptcha-site-keyX
+RECAPTCHA_SECRET_KEY=
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
