--- a/content/fr/apps.yaml
+++ b/content/fr/apps.yaml
@@ -441,8 +441,8 @@ content:
           documentation: /fr/apps/captain
           logo: captain.png
           title: Captain
-          description: Captain est une solution de traitement des commandes et de tracking des livreurs.
-          additional_info: Intégration en cours.
+          description: La suite de solutions de gestion Captain permet aux restaurateurs de gérer la livraison des commandes et aux clients de les suivre en temps réel. Un écran d'affichage en cuisine prioritise la séquence de cuisson. Un add-on permet de faire appel à des services de livraison tiers.
+          additional_info:
         - website: https://coursicab.com
           documentation: /fr/apps/coursicab
           logo: coursicab.png
