--- a/content/en/frontpage.yaml
+++ b/content/en/frontpage.yaml
@@ -42,7 +42,7 @@ content:
     title: Fair pricing for stores
     description: |
       No setup fee. No commitment. No contract.
-      Unlimited number of connections. 25€ per month.
+      Unlimited number of connections. €35 per month.
     button_label: Start free trial
     button_url: https://manager.hubrise.com/signup
     link_label: Pricing page
