--- a/content/fr/pricing.yaml
+++ b/content/fr/pricing.yaml
@@ -19,12 +19,12 @@ content:
       to: https://manager.hubrise.com/signup
   infos:
     - title: Franchises / Chaînes
-      text: Bénéficiez d'une remise grâce à un tarifs dégressifs dès le 6ème point de vente.
+      text: Bénéficiez d'une remise dès le 6ème point de vente.
       link:
         text: Voir les tarifs
         to: /fr/faqs#chaines
     - title: Dark Kitchen
-      text: Centralisez les commandes de toutes vos marques sur un seul point de vente.
+      text: Centralisez les commandes de vos marques virtuelles sur un seul point de vente.
       link:
         text: Voir les tarifs
         to: /fr/faqs#dark-kitchen
