Testimonial content + link in footer

--- a/content/en/menu-footer.yaml
+++ b/content/en/menu-footer.yaml
@@ -19,5 +19,7 @@ sections:
         to: /docs
   - title: Company
     links:
+      - title: Testimonials
+        to: /testimonials
       - title: Branding Guidelines
         to: /branding
